--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,23 +1,29 @@
-{% extends 'base.html' %}
+{% extends 'home/base.html' %}
 
 {% block title %}Home{% endblock title %}
-{% block style %}
-*{
-    margin: 0;
-    box-sizing: border-box;
-    padding: 0;
-    
-}
-.card-body { font-family: 'Lora', serif;}
-.d-block,.coll{
-    border-radius:0.2rem;
-    box-shadow:  rgb(8, 63, 247);
-}
+{% block head %}
+    <link href="static/css/index.css" rel="stylesheet">
+{% endblock head %}
 
-{% endblock style %}
+{% block icon %} 
+        <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user"  style="font-size:2rem" aria-hidden="true"></i></a></a>
+          <div class="dropdown-menu text-center">
+              <a class="dropdown-item " href="/contact">WelCome</a>
+              <a class="nav-brand " href='/login'> <i class="fa fa-sign-out" aria-hidden="true"> Log-Out</i></a>
+          </div>
+      </li>
+      </ul>
+
+{% endblock icon %}
+{% block home %}/{% endblock home %}
+{% block contact %}/contact{% endblock contact %}
+{% block about %}/about{% endblock about %}
 
 
 {% block body %}
+
 <div class="container-fluid px-0">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -27,14 +33,14 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-                <img src="/static/slide1.jpg" class="d-block w-100" alt="...">
+                <img src="/static/img/dallake.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
             <h5>Heaven Of Earth</h5>
             <p>Visit The Heaven of Earth, Srinagar </p>
         </div>
         </div>
         <div class="carousel-item">
-              <img src="/static/sports.jpg" class="d-block w-100" alt="...">
+              <img src="/static/img/sports.jpg" class="d-block w-100" alt="...">
 
         <div class="carousel-caption d-none d-md-block">
             <h5>Adventure Sposrts Of Kerala</h5>
@@ -42,7 +48,7 @@
         </div>
         </div>
         <div class="carousel-item">
-        <img src="/static/taj.jpg" class="d-block w-100" alt="...">
+        <img src="/static/img/taj.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
             <h5>The Taj Mahal</h5>
             <p>One of seven wonders pf world, a symbol of love and devotion </p>
@@ -76,7 +82,7 @@
   <div class="container">
     <div class="card-deck mt-2 mb-2">
       <div class="card">
-        <img class="card-img-top " src="/static/card/lotus.jpg" alt="Card image cap">
+        <img class="card-img-top " src="/static/img/card/lotus.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots1">Lotus Temple, New Delhi</h5>
           <p class="card-text" id="more1">The Lotus Temple, located in Delhi, India, is a Baháʼí House of Worship that was dedicated in December 1986. Notable for its flowerlike shape, it has become a prominent attraction in the city.</p>
@@ -86,7 +92,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top h-60" src="/static/card/toytrain.jpg" alt="Card image cap">
+        <img class="card-img-top h-60" src="/static/img/card/toytrain.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots2">Darjeeling Toy-Train</h5>
           <p class="card-text" id="more2">The Darjeeling Toy Train, is a prominent crowd-puller in the beautiful hill station of West Bengal with outstanding engineering marvel, noted for being the best example of a hill passenger railway.</p>
@@ -108,7 +114,7 @@
     </div>
     <div class="card-deck mt-2 mb-6">
       <div class="card">
-        <img class="card-img-top" src="/static/card/varanasi.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/static/img/card/varanasi.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots4">Varanasi</h5>
           <p class="card-text" id="more4">A major religious hub in India, it is the holiest of the seven sacred cities in Hinduism and Jainism, and played an important role in the development of Buddhism and Ravidassia.</p>
@@ -118,7 +124,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="/static/card/charminar.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/static/img/card/charminar.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots5">CharMinar, Hyderabad</h5>
           <p class="card-text" id="more5">The Charminar, constructed in 1591, is a monument and mosque located in Hyderabad, Telangana, India has become known globally as a symbol of Hyderabad and is listed among the most recognized structures in India.</p>
@@ -128,7 +134,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="/static/card/dallake.jpg" alt="Card image cap">
+        <img class="card-img-top" src="/static/img/card/dallake.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots6">Dal Lake, Srinagar</h5>
           <p class="card-text" id="more6"> It is integral to tourism and recreation in Kashmir and is named the "Lake of Flowers", "Jewel in the crown of Kashmir" or "Srinagar's Jewel". </p>
