--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -1,10 +1,24 @@
-{% extends 'base.html' %}
+{% extends 'home/base.html' %}
 
 
 {% block title %}About{% endblock title %}
 
 {% block head %}{% endblock head %}
+{% block icon %} 
+        <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user"  style="font-size:2rem" aria-hidden="true"></i></a></a>
+          <div class="dropdown-menu text-center">
+              <a class="dropdown-item " href="/contact">WelCome</a>
+              <a class="nav-brand " href='/login'> <i class="fa fa-sign-out" aria-hidden="true"> Log-Out</i></a>
+          </div>
+      </li>
+      </ul>
 
+{% endblock icon %}
+{% block home %}/{% endblock home %}
+{% block contact %}/contact{% endblock contact %}
+{% block about %}/about{% endblock about %}
 {% block body %}
 <div class="bg-light">
   <div class="container py-5">
