--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,4 +1,5 @@
 {% extends 'home/base.html' %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}"/>
 
 {% block title %}Home{% endblock title %}
 {% block head %}
@@ -33,14 +34,14 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-                <img src="/static/img/dallake.jpg" class="d-block w-100" alt="...">
+                <img src="{% static 'img/dallake.jpg' %}" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
             <h5>Heaven Of Earth</h5>
             <p>Visit The Heaven of Earth, Srinagar </p>
         </div>
         </div>
         <div class="carousel-item">
-              <img src="/static/img/sports.jpg" class="d-block w-100" alt="...">
+              <img src="{% static 'img/sports.jpg' %}" class="d-block w-100" alt="...">
 
         <div class="carousel-caption d-none d-md-block">
             <h5>Adventure Sposrts Of Kerala</h5>
@@ -48,7 +49,7 @@
         </div>
         </div>
         <div class="carousel-item">
-        <img src="/static/img/taj.jpg" class="d-block w-100" alt="...">
+        <img src="{% static 'img/taj.jpg' %}" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
             <h5>The Taj Mahal</h5>
             <p>One of seven wonders pf world, a symbol of love and devotion </p>
@@ -82,7 +83,7 @@
   <div class="container">
     <div class="card-deck mt-2 mb-2">
       <div class="card">
-        <img class="card-img-top " src="/static/img/card/lotus.jpg" alt="Card image cap">
+        <img class="card-img-top " src="{% static 'img/card/lotus.jpg' %}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots1">Lotus Temple, New Delhi</h5>
           <p class="card-text" id="more1">The Lotus Temple, located in Delhi, India, is a Baháʼí House of Worship that was dedicated in December 1986. Notable for its flowerlike shape, it has become a prominent attraction in the city.</p>
@@ -92,7 +93,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top h-60" src="/static/img/card/toytrain.jpg" alt="Card image cap">
+        <img class="card-img-top h-60" src="{% static 'img/card/toytrain.jpg' %}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots2">Darjeeling Toy-Train</h5>
           <p class="card-text" id="more2">The Darjeeling Toy Train, is a prominent crowd-puller in the beautiful hill station of West Bengal with outstanding engineering marvel, noted for being the best example of a hill passenger railway.</p>
@@ -114,7 +115,7 @@
     </div>
     <div class="card-deck mt-2 mb-6">
       <div class="card">
-        <img class="card-img-top" src="/static/img/card/varanasi.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{% static 'img/card/varanasi.jpg' %}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots4">Varanasi</h5>
           <p class="card-text" id="more4">A major religious hub in India, it is the holiest of the seven sacred cities in Hinduism and Jainism, and played an important role in the development of Buddhism and Ravidassia.</p>
@@ -124,7 +125,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="/static/img/card/charminar.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{% static 'img/card/charminar.jpg' %}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots5">CharMinar, Hyderabad</h5>
           <p class="card-text" id="more5">The Charminar, constructed in 1591, is a monument and mosque located in Hyderabad, Telangana, India has become known globally as a symbol of Hyderabad and is listed among the most recognized structures in India.</p>
@@ -134,7 +135,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top" src="/static/img/card/dallake.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{% static 'img/card/dallake.jpg' %}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots6">Dal Lake, Srinagar</h5>
           <p class="card-text" id="more6"> It is integral to tourism and recreation in Kashmir and is named the "Lake of Flowers", "Jewel in the crown of Kashmir" or "Srinagar's Jewel". </p>
