--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -3,7 +3,9 @@
 
 {% block title %}About{% endblock title %}
 
-{% block head %}{% endblock head %}
+{% block head %}
+    <link  type ="text/css" href="static/css/about.css" rel="stylesheet">
+{% endblock head %}
 {% block icon %} 
         <ul class="navbar-nav">
         <li class="nav-item dropdown">
@@ -113,6 +115,34 @@
     </div>
   </div>
 </div>
+<section class="mb-3 mt-3">
+<div class="container">
+ <h2 class="display-4 font-weight-light text-center ">Reviews of :) Customers</h2>
+    <div id="demo" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="carousel-caption">
+                    <p  style="font-family:'Lora', cursive; ">I had a very memorable trip to Kanyakumari. It was awesome and services provided by <span style="font-family: 'Cookie', cursive; font-size:2rem">Incredible India </span>  was excellent  </p> <img src="https://p7.hiclipart.com/preview/922/81/315/stock-photography-computer-icons-user-3d-character-icon-vector-material.jpg">
+                    <div id="image-caption">Subham Sah</div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-caption">
+                  <p  style="font-family:'Lora', cursive; ">I had a very memorable trip to Darjeeling. It was awesome and services provided by <span style="font-family: 'Cookie', cursive; font-size:2rem">Incredible India </span> was excellent  </p>  <img src="https://p7.hiclipart.com/preview/922/81/315/stock-photography-computer-icons-user-3d-character-icon-vector-material.jpg" class="img-fluid">
+                    <div id="image-caption">Arya Sah</div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-caption">
+                  <p  style="font-family:'Lora', cursive; ">I had a very memorable trip to Udaipur. It was awesome and services provided by <span style="font-family: 'Cookie', cursive; font-size:2rem">Incredible India </span> was excellent  </p> <img src="https://p7.hiclipart.com/preview/922/81/315/stock-photography-computer-icons-user-3d-character-icon-vector-material.jpg" class="img-fluid">
+                    <div id="image-caption">Ashutosh Rathore</div>
+                </div>
+            </div>
+        </div> <a class="carousel-control-prev" href="#demo" data-slide="prev"> <i class='fa fa-arrow-left icon'></i> </a> <a class="carousel-control-next" href="#demo" data-slide="next"> <i class='fa fa-arrow-right icon'></i> </a>
+    </div>
+</div>
+</section>
+
 
 
 
