--- a/home/templates/home/register.html
+++ b/home/templates/home/register.html
@@ -20,12 +20,19 @@
  {% endblock icon %}
 
 {% block body %}
-<section style="display:flex;justify-content:center">
-
+<div class="text-center">
+<h1 style="font-family:'Langar',cursive;">Sign-Up</h1>
+</div>
+<section style="display:flex;justify-content:center;border:1px solid #fafafa">
 <form method="post" class="form-group">
 {% csrf_token %}
 {{form| crispy}}
-<button type="submit" class="btn btn-success">Submit</button>
+<div class="text-center">
+<button type="submit" class="btn btn-success" style="background-color:green; font-size:1.4rem">Register</button>
+</div>
 </form>
 </section>
+<div class="text-center">
+        <p class="mt-5 mb-3 text-muted"><b>&copy;2021 <br><i> All Rights Reserved To Arya Sah</i</b>></p>
+</div>
 {% endblock body %}
