--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,8 +1,8 @@
-<<<<<<< HEAD
-=======
+
 {% extends 'home/base.html' %}
+{% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}"/>
->>>>>>> 42b817542538ca2faf4082471274a9ce56ab559a
+
 
 {% extends 'home/base.html' %}
 {% load static %}
@@ -88,11 +88,11 @@
     <section>
   <div class="container mb-5">
     <div class="card-deck mt-2 mb-2">
-<<<<<<< HEAD
+
       <div class="card" data-aos="fade-right"  data-aos-duration="9000" data-aos-easing="ease-in-out" data-aos-delay="100">
-=======
+
       <div class="card">
->>>>>>> 42b817542538ca2faf4082471274a9ce56ab559a
+
         <img class="card-img-top " src="{% static 'img/card/lotus.jpg' %}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots1">Lotus Temple, New Delhi</h5>
@@ -156,11 +156,11 @@
           <button class="btn btn-primary" onclick="myFunction5()" id="myBtn5">Know more</button>
         </div>
       </div>
-<<<<<<< HEAD
+
       <div class="card"  data-aos="fade-left" data-aos-duration="9000" data-aos-easing="ease-in-out" data-aos-delay="100">
-=======
+
       <div class="card">
->>>>>>> 42b817542538ca2faf4082471274a9ce56ab559a
+
         <img class="card-img-top" src="{% static 'img/card/dallake.jpg' %}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" id="dots6">Dal Lake, Srinagar</h5>
