--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -31,8 +31,8 @@
           <h3 class="animate__animated animate__rollIn">Welcome to India </h3>
           <h1>Do Visit The Place <span class="change_content"></span></h1>
           <p>India once is not enough</p><br>
-          <a href="/register"class="btn1">Sign-Up</a>
-          &nbsp;&nbsp;<a href="#section2"class="btn2">Log-In</a>
+          <a style="font-size:2rem" href="/signup"class="btn1">Sign-Up</a>
+          &nbsp;&nbsp;<a href="#section2"class="btn2" style="font-size:2rem" >Log-In</a>
          </section>
          </main>
 </section>
